--- a/index.html
+++ b/index.html
@@ -51,14 +51,18 @@
 
 <!--educ-->
 <div class="col">
+<div class="accordion" id="jovin">
+<div class="accordion-item">
+  <h2 class="accordion-header" id="headerOne">
+    <button class="accordion-button" type="button" data-bs-toogle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Educational Background
+    </button>
+  </h2>
 
-<p>
-	<button class="btn btn-success" type="button" data-toggle="collapse" data-target="#elem" aria-expanded="false" aria-controls="elem">
-		show more
-	</button>
-</p>
-<div class="collapse" id="#elem">
-<div class="card border-primary mb-3" style="max-width: 18rem;">
+
+<!--<div class="collapse" id="elem">-->
+  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headerOne" data-bs-parent="#jovin">
+    <div class="accordion-body">
+<div class="card border-primary mb-3" style="max-width: auto;">
   <div class="card-header">Header</div>
   <div class="card-body text-primary">
     <h5 class="card-title">Primary card title</h5>
@@ -66,9 +70,23 @@
   </div>
 </div>
 </div>
+
+</div>
+</div>
 </div>
 
-<div class="col">
+
+
+
+
+<!--<div class="col">-->
+<div class="accordion-item">
+  <h2 class="accordion-header" id="headerTwo">
+    <button class="accordion-button" type="button" data-bs-toogle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Educational Background
+    </button>
+  </h2>
+<div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headerTwo" data-bs-parent="#jovin">
+      <div class="accordion-body">
 <div class="card border-secondary mb-3" style="max-width: 18rem;">
   <div class="card-header">Header</div>
   <div class="card-body text-secondary">
@@ -78,13 +96,23 @@
 </div>
 </div>
 </div>
+</div>
+</div>
 
+
+
+</div>
+</div>
 </div>
 
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 </body>
 
